<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logingreen3"
    tools:context=".HomeActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_alignTop="@+id/new_user_space" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/grow_your_money_with_every_swipe"
            android:textSize="24sp" />

        <Button
            android:id="@+id/new_account"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:background="@drawable/logingreen3"
            android:text="@string/create_new_account"
            tools:text="@string/create_new_account" />

        <Space
            android:id="@+id/new_user_space"
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@drawable/logingreen3"
            android:text="@string/sign_in" />

    </LinearLayout>
</RelativeLayout>